# ProgettoFinaleAIPY_GiulianaTecchio

./: .env.example  pyproject.toml
src/travel_agent_api_giulianatecchio/: main.py
src/travel_agent_api_giulianatecchio/routes/: chat_router.py
src/travel_agent_api_giulianatecchio/services/: agent_service.py
