[project]
name = "travel-agent-api-giulianatecchio"
version = "0.1.0"
description = ""
authors = [
    {name = "Giuliana Tecchio",email = "giulianatcch@gmail.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.9.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "travel_agent_api_giulianatecchio", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
